# rust-cc

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: bench.yml  build.yml  buildAndTest.yml  buildStable.yml  checkAndClippy.yml  miri.yml  test.yml  testNightly.yml  testStable.yml
benches/: bench.rs  shredder_benchmark.rs
benches/benches/: binary_trees.rs  binary_trees_with_parent_pointers.rs  large_linked_list.rs  stress_test.rs
derive/: Cargo.toml  README.md
derive/src/: lib.rs
src/: cc.rs  config.rs  counter_marker.rs  derives.rs  graph.rs  lib.rs  list.rs  lists.rs  state.rs  trace.rs  utils.rs
src/cleaners/: mod.rs
src/tests/: cc.rs  counter_marker.rs  list.rs  lists.rs  mod.rs  panicking.rs
src/tests/bench_code/: mod.rs
src/tests/cleaners/: mod.rs
src/tests/weak/: mod.rs
src/weak/: mod.rs  weak_counter_marker.rs  weak_metadata.rs
tests/: auto_collect.rs  cc.rs  macro_tests.rs  triggering.rs  weak.rs  weak_upgrade_tests.rs
tests/derive_macro_tests/: derive_finalize.rs  derive_trace.rs  empty_attribute.rs  ignored_variant.rs  invalid_attributes.rs  invalid_attributes.stderr  invalid_drop_impl.rs  invalid_drop_impl.stderr  invalid_field_bounds.rs  invalid_field_bounds.stderr  invalid_ignore_attribute.rs  invalid_ignore_attribute.stderr  invalid_no_drop_attribute.rs  invalid_no_drop_attribute.stderr  no_drop.rs  traced_fields_enum.rs  traced_fields_struct.rs
