[package]
name = "rust-cc-derive"
description = "Derive macro for rust-cc"
version = "0.0.0"
authors.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords = ["cycle", "cycles", "collector", "memory", "macro"]
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
