[package]
name = "rust-cc-derive"
description = "Derive macro for rust-cc"
version.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords = ["cycle", "cycles", "collector", "memory", "macro"]
license.workspace = true
edition.workspace = true

[features]
nightly = []

[lib]
proc-macro = true

[dependencies]
