[package]
name = "rust-cc-derive"
description = "Derive macro for rust-cc"
version.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
categories = ["memory-management"]
keywords = ["cycle", "cycles", "collector", "memory", "macro"]
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", default-features = false, features = ["derive", "parsing", "printing"] }
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-error = "1.0"
synstructure = "0.13.1"
